--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "com.dkaera.mash"
         minSdk 21
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -32,7 +32,7 @@ android {
             keyPassword 'android'
         }
         release {
-            storeFile file('./release.keystore')
+            storeFile rootProject.file('release.keystore')
             keyAlias 'key0'
         }
     }
