--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,17 @@ plugins {
 }
 
 android {
+    Properties properties = new Properties()
+    properties.load(new FileInputStream("local.properties"))
+
     compileSdk 32
 
     defaultConfig {
         applicationId "com.dkaera.mash"
         minSdk 21
         targetSdk 32
-        versionCode 2
-        versionName "1.1"
+        versionCode 3
+        versionName "1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -32,7 +35,9 @@ android {
             keyPassword 'android'
         }
         release {
+            storePassword properties.getProperty("storePassword")
             storeFile rootProject.file('release.keystore')
+            keyPassword properties.getProperty("keyPassword")
             keyAlias 'key0'
         }
     }
